k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cp-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cp-backend
  template:
    metadata:
      labels:
        app: cp-backend
    spec:
      containers:
        - name: cp-backend
          image: dhaanush19/careerpilot-backend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cp-backend
spec:
  selector:
    app: cp-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
